# tauri-v2-sveltekit-diesel-template

./: .prettierignore  .prettierrc.yaml  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
server/: .env.example  Cargo.toml  diesel.toml  tauri.conf.json
server/migrations/2024-11-05-185156_create_users/: up.sql
server/src/: errors.rs  lib.rs  main.rs  models.rs  schema.rs
server/src/commands/: password.rs
server/src/db/: users.rs
server/src/routes/: users.rs
server/src/tests/: initial.rs
src/routes/: +page.svelte
src/types/: index.ts
