[package]
name = "template"
version = "0.0.0"
description = "A Tauri Template"
authors = ["you"]
edition = "2021"
default-run = "template"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "template"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
tauri-plugin-shell = "2"
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
